--- a/auburn-redirect-tool/manifest.json
+++ b/auburn-redirect-tool/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "ART",
-  "version": "0.6",
+  "version": "0.7",
   "description": "Auburn Redirect Tool allows simple URL replacement ciphers for domains frequently used by the CWS team.",
   "permissions": ["webRequest", "webRequestBlocking", "webNavigation",
-                  "*://fp.auburn.edu/*", "*://fp/*", "*://cws/*", "*://dev/*", "*://cwsdev/*", "*://test/*", "*://cwstest/*", "*://migr/*", "*://cwsmigr/*", "*://auburn/*", "*://auaccess2.auburn.edu/*"],
+                  "*://fp.auburn.edu/*", "*://fp/*", "*://cws/*", "*://oitapps/*", "*://dev/*", "*://cwsdev/*", "*://oitappsdev/*", "*://test/*", "*://cwstest/*", "*://oitappstest/*", "*://migr/*", "*://cwsmigr/*", "*://oitappsmigr/*", "*://auburn/*", "*://auaccess2.auburn.edu/*"],
   "background": {
     "scripts": ["art.js"]
   },
